--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
     "@rails/actioncable": "7.1.3",
     "@rails/activestorage": "7.1.3",
     "@rails/ujs": "7.1.3",
-    "@rails/webpacker": "5.4.4",
-    "turbolinks": "5.2.0",
-    "webpack": "4.46.0",
-    "webpack-cli": "4.9.1"
+    "esbuild": "^0.21.3",
+    "turbolinks": "5.2.0"
   },
   "version": "0.1.0",
-  "devDependencies": {
-    "webpack-dev-server": "4.4.0"
+  "devDependencies": {},
+  "scripts": {
+    "build": "esbuild app/javascript/*.* --bundle --sourcemap --format=esm --outdir=app/assets/builds --public-path=/assets"
   }
 }
